**feat: 新增 AI 聊天服务的支持功能模块**
- 添加 `AiChatCitationSupport` 类，实现引用模式规范化、内联引用清理和引用来源过滤等逻辑
- 增强 `AiChatInputSupport` 模块，支持多图像和文件解析，以及历史文本中的文件引用提取
- 新建工具类 `AiChatJsonSupport`，用于聊天内容的 JSON 格式化与转义处理
- 引入 `AiChatRetrievalSupport`，统一实现 RAG 检索逻辑优化与调试输出
- 补充单元测试覆盖，验证所有新增功能模块的行为是否符合预期